// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixed-layout-preset > custom fromNodeJSON and toNodeJSON 1`] = `
{
  "nodes": [
    {
      "blocks": [],
      "data": {
        "isFirstCreate": true,
        "runningTimes": 1,
        "title": "start title",
      },
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "blocks": [],
          "data": {
            "isFirstCreate": true,
            "runningTimes": 1,
            "title": "",
          },
          "id": "block_0",
          "type": "block",
        },
        {
          "blocks": [],
          "data": {
            "isFirstCreate": true,
            "runningTimes": 1,
            "title": "",
          },
          "id": "block_1",
          "type": "block",
        },
        {
          "blocks": [],
          "data": {
            "isFirstCreate": true,
            "runningTimes": 1,
            "title": "",
          },
          "id": "block_2",
          "type": "block",
        },
      ],
      "data": {
        "isFirstCreate": true,
        "runningTimes": 1,
        "title": "dynamic title",
      },
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "blocks": [],
      "data": {
        "isFirstCreate": true,
        "runningTimes": 1,
        "title": "end title",
      },
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`fixed-layout-preset > custom fromNodeJSON and toNodeJSON 2`] = `
{
  "nodes": [
    {
      "blocks": [],
      "data": {
        "isFirstCreate": false,
        "runningTimes": 1,
        "title": "start title changed",
      },
      "id": "start_0",
      "type": "start",
    },
    {
      "blocks": [
        {
          "blocks": [],
          "data": {
            "isFirstCreate": true,
            "runningTimes": 1,
            "title": "",
          },
          "id": "block_3",
          "type": "block",
        },
        {
          "blocks": [],
          "data": {
            "isFirstCreate": true,
            "runningTimes": 1,
            "title": "",
          },
          "id": "block_4",
          "type": "block",
        },
        {
          "blocks": [],
          "data": {
            "isFirstCreate": false,
            "runningTimes": 1,
            "title": "title changed",
          },
          "id": "block_2",
          "type": "block",
        },
      ],
      "data": {
        "isFirstCreate": false,
        "runningTimes": 1,
        "title": "dynamic title changed",
      },
      "id": "dynamicSplit_0",
      "type": "dynamicSplit",
    },
    {
      "blocks": [],
      "data": {
        "isFirstCreate": false,
        "runningTimes": 1,
        "title": "end title changed",
      },
      "id": "end_0",
      "type": "end",
    },
  ],
}
`;

exports[`fixed-layout-preset > nodeEngine(v2) toJSON 1`] = `
{
  "nodes": [
    {
      "blocks": [],
      "data": {
        "title": "noop title2",
      },
      "id": "noop_0",
      "type": "noop",
    },
  ],
}
`;
